# multithread_opencv

./: CMakeLists.txt  dependencies.sh  osdependencies.sh
src/: CMakeLists.txt  common.hpp  frameQueue.hpp  main.cpp  main2.cpp  videoflow.hpp
src/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  common.hpp  custom_data.hpp  frameQueue.hpp  net_message.hpp  object_queue.hpp
src/video_c/: CMakeLists.txt  grey_scale.cpp  grey_scale.hpp  slam.cpp
src/video_c/video_base/: CMakeLists.txt  video_base.cpp  video_base.hpp
src/video_c/video_interface/: CMakeLists.txt  process_frame.cpp  process_frame.hpp  video_base.cpp  video_base.hpp  video_instance.hpp  video_interface.hpp  videoflow.cpp  videoflow.hpp
src/video_c/video_interface/process_frame/: CMakeLists.txt  blurr.cpp  blurr.hpp  canny.cpp  canny.hpp  display.cpp  display.hpp  grey_scale.cpp  grey_scale.hpp  load_frames.cpp  load_frames.hpp  process_base.cpp  process_base.hpp  process_interface.hpp
src/video_c/video_interface/video_base/: CMakeLists.txt  video_base.cpp  video_base.hpp  video_instance.cpp  video_instance.hpp
